...
  Future<String> resetAPIKey(String name) async {
    var response = await client.post(
      Uri(
        scheme: kBackendScheme,
        host: kBackendHost,
        port: kBackendPort,
        pathSegments: [...relativePathSegments, name, "api-key"],
      ),
    );
    if (response.statusCode != 200) {
      handleErrorResponse(response);
    }
    return response.body;
...
